[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abstar"
description = "Germline assignment and annotation of AIRR data. Scalable from a single sequence to billions of sequences."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Bryan Briney", email = "briney@scripps.edu" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version", "dependencies"]

[project.scripts]
abstar = "abstar.scripts.abstar:cli"

[project.urls]
Homepage = "https://github.com/brineylab/abstar"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["abstar*"]

[tool.setuptools.dynamic]
version = { attr = "abstar.version.__version__" }
dependencies = { file = ["requirements.txt"] }

