[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abstar"
version = "0.8.0"
description = "Germline assignment and annotation of AIRR data. Scalable from a single sequence to billions of sequences."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Bryan Briney", email = "briney@scripps.edu" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "abutils>=0.5.1",
  "click",
  "matplotlib",
  "numpy",
  "pandas",
  "parasail",
  "polars",
  "pyarrow",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
abstar = "abstar.scripts.abstar:cli"

[project.urls]
Homepage = "https://github.com/brineylab/abstar"

[tool.hatch.build.targets.wheel]
packages = ["src/abstar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["abstar"]
